# tjmake

./: .gitignore  README.md  TAGS  shake-teyjus.cabal  stack.yaml
app/: Main.hs
